--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -64,7 +64,13 @@ $store_finder_header: $black;
 $store_finder_header_desktop: $black;
 $store_finder_subheader: $black;
 $store_finder_glossary_text: $black;
-$store_finder_locationboder: $gray;
+$store_finder_search_results_tile_link: $black;
 $store_finder_search_input: $gray;
 $store_finder_search_input_border: $gray;
-
+$store_finder_glossary_alphabet: $black;
+$store_finder_search_results_hour_label :$black;
+$store_finder_search_results_tile_icon: $black;
+$store_finder_search_results_hour_icon_open: $black;
+$store_finder_glossary_icon: $black;
+$store_finder_backbtn: $black;
+$store-finder-openinghours-border: $gray;
