CORE-44416: Theming store finder for Alo yoga.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/base/form/button/_button.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/base/form/button/_button.scss
@@ -4,5 +4,6 @@
     border-color: $primary_empty_btn_border;
     font-family: $ay-heavy;
     font-size: rem(16);
+    text-transform: uppercase;
   }
 }
