--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/_brand-feature-override.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/_brand-feature-override.scss
@@ -3,5 +3,6 @@
 @import "config/colors";
 @import "config/fonts";
 @import "../../alshaya_white_label/sass/placeholder";
+@import "utils";
 @import "../../alshaya_white_label/sass/directional";
 @import "directional";
