--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -72,6 +72,7 @@ $store_finder_search_results_tile_icon: $black;
 $store_finder_search_results_hour_icon_open: $black;
 $store_finder_glossary_icon: $black;
 $store_finder_backbtn: $black;
+$store_finder_search_results_counter_bg: $nb-red;
 
 // Footer
 $footer_border_top: $gray2;
