--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -17,7 +17,7 @@ $content_pagetitle: $black;
 $primary_link-hover: $black;
 $primary_link-active: $black;
 $secondary_text: $nb-black;
-$primary_border: $gray;
+$primary_border: $black;
 $secondary_border: $nb-red;
 $content_pagetitle_border: $black;
 
@@ -27,6 +27,9 @@ $primary_empty_btn: $white;
 $primary_btn_text: $white;
 $primary_empty_btn_border: $nb-red;
 $primary_empty_btn_text: $nb-red;
+$secondary_btn_bg: $white;
+$secondary_btn_bg_hover: $gray2;
+$secondary_btn_text: $nb-red;
 
 // Checkbox & Radio.
 $primary_radiobtn_label: $black;
@@ -34,6 +37,7 @@ $primary_radiobtn_empty: $nb-gray;
 $primary_radiobtn_filled: $nb-red;
 $secondary_radiobtn_empty: $nb-gray;
 $secondary_radiobtn_filled: $black;
+$primary_checkbox_filled: $nb-red;
 
 // Dropdown.
 $primary_dropdown_bg: $white;
@@ -67,10 +71,6 @@ $footer-newsletter-text: $white;
 $footer-top-bg: $black;
 $lang_switch: $black;
 
-$secondary_btn_bg: $white;
-$secondary_btn_bg_hover: $gray2;
-$secondary_btn_text: $nb-red;
-
 //Signup
 $user_form_text: $ada-gray;
 $social_auth_login_button_border: $nb-red;
@@ -78,13 +78,10 @@ $user_form_layout_divider_color: $black;
 $primary_form_link: $black;
 $user_login_section_title: $black;
 $user_login_sub_text: $black;
-$primary_border: $black;
 $user_field_link: $black;
 $select_drop_down_hover: $nb-gray;
 
 // User Form
-$user_field_link: $black;
-$user_form_text: $ada-gray;
 $my_account_nav: $black;
 $my_account_nav_active: $black;
 $my_account_nav_hover: $black;
@@ -112,7 +109,6 @@ $primary_dropdown_arrow_icon: $black;
 // Form elements.
 $primary_form_selector_border: $black;
 $primary_form_selector: $ada-gray;
-$primary_form_link: $black;
 $primary_form_input_text: $ada-gray;
 $primary_input_label: $ada-gray;
 $primary_input_border: $black;
