--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
@@ -1,3 +1,21 @@
+@mixin logo_height($height_px_en, $height_px_ar) {
+  .branding__menu {
+    .c-header__region {
+      .block-system-branding-block {
+        .site-brand-home {
+          img {
+            height: rem($height_px_en);
+
+            html[lang="ar"] & {
+              height: rem($height_px_ar);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 .super-category-enabled {
   header {
     #mini-cart-wrapper {
@@ -7,17 +25,9 @@
     }
   }
 
-  &.super-category-american-eagle {
-    .branding__menu {
-      .c-header__region {
-        .block-system-branding-block {
-          .site-brand-home {
-            img {
-              height: rem(20);
-            }
-          }
-        }
-      }
-    }
+  @include logo_height(20, 42);
+
+  &.super-category-aerie {
+    @include logo_height(28, 28);
   }
 }
