--- a/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
@@ -671,3 +671,24 @@ $brand_theme_img_directory_path: '/themes/custom/transac/alshaya_white_label/img
     }
   }
 }
+
+// Set the height for brand logo on header.
+@mixin logo_height($height_px_en, $height_px_ar: 0) {
+  .branding__menu {
+    .c-header__region {
+      .block-system-branding-block {
+        .site-brand-home {
+          img {
+            height: rem($height_px_en);
+
+            @if $height_px_ar != 0 {
+              html[lang="ar"] & {
+                height: rem($height_px_ar);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
