CORE-42414: Fixed vertical alignment of nav links for WE and BP.

--- a/docroot/themes/custom/transac/alshaya_boots/sass/components/header/_header-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/sass/components/header/_header-secondary.scss
@@ -92,7 +92,7 @@ body {
     .ar {
       a {
         @include breakpoint($desktop) {
-          padding-top: 0.3125rem;
+          padding-top: rem(8);
         }
       }
     }
