CORE-45029: Arabic logo heights on print invoice.

--- a/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/conditional-sass/my-account/component/_order-print.scss
@@ -12,6 +12,10 @@
     img {
       max-width: 15.5625rem;
       height: auto;
+
+      html[lang=ar] & {
+        height: auto;
+      }
     }
   }
 
