--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -27,6 +27,10 @@ body {
     img {
       margin: rem(28) 0;
       height: rem(42);
+
+      html[lang=ar] & {
+        height: rem(65);
+      }
     }
   }
 
