--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-print.scss
@@ -36,6 +36,10 @@
     img {
       margin: rem(33) 0 rem(25);
       height: rem(54);
+
+      html[lang=ar] & {
+        height: rem(54);
+      }
     }
   }
 
