CORE-42414: Fixed options list menu vertical alignment on BP.

--- a/docroot/themes/custom/transac/alshaya_boots/conditional-sass/optionlist-menu/component/_options-list-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_boots/conditional-sass/optionlist-menu/component/_options-list-menu.scss
@@ -34,6 +34,12 @@
         @include breakpoint($upto-desktop) {
           font-size: 0.875rem;
         }
+
+        @include breakpoint($desktop) {
+          html[lang=ar] & {
+            margin-top: rem(2);
+          }
+        }
       }
     }
   }
