--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
@@ -195,3 +195,18 @@ $store_finder_search_results_hour_icon_open: $black;
 $store_finder_storewrapper_bg: $smoke;
 $store_finder_map_border: $mercury;
 $store_finder_search_results_counter_bg: $black;
+
+// Mega menu.
+$mm_body_overlay: rgba(0, 0, 0, 0.5);
+$mm_l1_border: $alto;
+$mm_l1_desktop-border: $white;
+$mm_l1_link: $black;
+$mm_l1_link_hover: $black;
+$mm_l1_link_active_border: $black;
+$mm_l2_link: $black;
+$mm_l2_link_hover: $black;
+$mm_l3_link: $black;
+$mm_highlight_label: $black;
+$mm_highlight_title: $black;
+$mm_highlight_description: $black;
+$mm_l3_link_hover: $black;
