CORE-44490: Header desktop for new balance.

--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/components/footer/_footer-primary.scss
@@ -56,7 +56,7 @@
 
       #edit-email,
       #edit-email--2 {
-        padding-#{$right}: 2%;
+        padding-#{$right}: 2% !important;
         padding-#{$left}: 2%;
         color: $footer-newsletter-text;
         background-color: $footer-text;
