--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -57,6 +57,8 @@ $header_search_active_bg: $gray2;
 $header_secondary_bg: $gray2;
 $header_secondary_menu_link: $black;
 $header_secondarry_menu_color: $black;
+$mm_l2_link: $black;
+$mm_l3_link_hover: $black;
 
 // Store Finder.
 $store-finder-border-hover: $nb-red;
@@ -139,3 +141,18 @@ $primary_input_inline_error: $red2;
 $checkout_login_separtor: $black;
 $checkout_login_separtor_txt_bg: $white;
 $checkout_login_separtor_txt: $black;
+
+//Megamenu
+$mm_l1_desktop-border: $black;
+$mm_l1_link_hover: $black;
+$mm_l1_link: $black;
+$mm_l2_link: $black;
+$mm_l2_link_desktop: $black;
+$mm_l2_link_hover: $black;
+$mm_l3_link: $black;
+$mm_l3_link_hover: $black;
+$main_menu_bg: $white;
+$header_mobile_menu_arrow: $black;
+$header_toggle_sign_active_tab: $black;
+$header_mobile_menu_close: $black;
+$header_secondary_menu_link_mobile: $black;
