HEL-574: sentence case to be followed throughout the application and copy check for Hello Member.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-benefit-landing-page/component/_benefits-landing-page.scss
@@ -18,11 +18,24 @@
         font-family: $hnm-demibold;
       }
     }
+
+    .qr-code-button,
+    .button-wide {
+      text-transform: unset;
+    }
   }
 
   .expire-on {
     h3 {
       text-transform: uppercase;
+    }
+  }
+}
+
+.my-membership {
+  .points-block {
+    .qr-code-button {
+      text-transform: unset;
     }
   }
 }
