--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/hello-member-promotion/component/_promo-popup.scss
@@ -16,6 +16,12 @@
       .become-hello-member__header {
         font-family: $hnm-demibold;
       }
+
+      .become-hello-member__actions {
+        .become-hello-member__actions-link {
+          text-transform: unset;
+        }
+      }
     }
   }
 }
