--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/components/mega-menu/_menu.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/components/mega-menu/_menu.scss
@@ -78,7 +78,7 @@
   .toggle--sign {
     .one {
       font-size: rem(14);
-      text-transform: uppercase;
+      text-transform: none;
       width: 50%;
 
       &.shop {
