--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/_utils.scss
@@ -51,7 +51,7 @@ $nb_theme_img_directory_path: '/themes/custom/transac/alshaya_new_balance/imgs';
   display: inline-block;
   height: $height;
   width: $width;
-  margin-bottom: -0.375rem;
+  margin-bottom: rem(-6);
   cursor: pointer;
   line-height: 1;
   -webkit-font-smoothing: antialiased;
