HEL-531: plus member should be displayed as per design.

--- a/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/sass/config/_colors.scss
@@ -859,6 +859,7 @@ $hello-member-points-block-bg: $white-linen;
 $hello-member-points-block-light-txt: $nickel;
 $hello-member-points-block-tier-progress: $gainsboro;
 $hello-member-points-block-tier-progress-active: $hnm-red;
+$hello-member-points-block-tier-title: $hnm-red;
 
 // Hello Member benefit block
 $hello-member-my-offers-bg: $_grey_11;
