CORE-45351: Eligible label fixed for ODP.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-common.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-common.scss
@@ -1,3 +1,16 @@
 .bold-text {
   font-family: $hnm-demibold;
 }
+
+.order-item-image {
+  .image-data-wrapper {
+    &.in-eligible,
+    &.big-ticket-item {
+      .big-ticket-item-label,
+      .not-eligible-label {
+        font-family: $hnm-demibold;
+      }
+    }
+  }
+}
+
