--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-eligibility.scss
@@ -33,3 +33,15 @@
     }
   }
 }
+
+.order-item-image {
+  .image-data-wrapper {
+    &.in-eligible,
+    &.big-ticket-item {
+      .big-ticket-item-label,
+      .not-eligible-label {
+        font-family: $hnm-demibold;
+      }
+    }
+  }
+}
