--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_return-eligibility.scss
@@ -328,3 +328,55 @@
     }
   }
 }
+
+.image-data-wrapper {
+  max-width: rem(128);
+  position: relative;
+
+  @include breakpoint($tablet) {
+    max-width: rem(114);
+  }
+
+  &.in-eligible,
+  &.big-ticket-item {
+    img {
+      opacity: 0.5;
+    }
+
+    .not-eligible-label,
+    .big-ticket-item-label {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: rem(11);
+      padding: rem(4) rem(5) rem(3);
+      width: rem(140);
+      font-family: $alshaya-bold;
+      text-align: center;
+      line-height: rem(13);
+
+      @include breakpoint($tablet) {
+        width: rem(120);
+      }
+
+      @include breakpoint($desktop) {
+        width: rem(130);
+      }
+    }
+  }
+
+  &.in-eligible {
+    .not-eligible-label {
+      background-color: $online-return-ineligible-label-bg;
+      color: $online-return-eligibility-message-txt;
+    }
+  }
+
+  &.big-ticket-item {
+    .big-ticket-item-label {
+      background-color: $online-return-big-ticket-label-bg;
+      color: $online-return-big-ticket-label-txt;
+    }
+  }
+}
