--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -105,9 +105,9 @@ $user_field_link: $black;
 $select_drop_down_hover: $nb-gray;
 
 // User Form
-$my_account_nav: $black;
-$my_account_nav_active: $black;
-$my_account_nav_hover: $black;
+$my_account_nav: $nb-black;
+$my_account_nav_active: $nb-black;
+$my_account_nav_hover: $nb-black;
 $user_form_layout_divider_color: $black;
 $login_form_border: $black;
 $user_form_inp_text: $ada-gray;
@@ -156,3 +156,13 @@ $header_mobile_menu_arrow: $black;
 $header_toggle_sign_active_tab: $black;
 $header_mobile_menu_close: $black;
 $header_secondary_menu_link_mobile: $black;
+
+//My Account
+$label_dark: $ada-gray;
+$label_black: $ada-gray;
+$user_order_help_bg: $light-gray;
+$user_order_help_text: $black;
+$user_order_help_text_links: $ada-gray;
+$user_acc_details_border:$gray;
+$user_nav_mobile_link: $ada-gray;
+$my_acc_mob_border_color: $gray2;
