CORE-42472: Incorporated new changes of SDD/ED to V3.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
@@ -79,7 +79,7 @@
         </div>
 
         {% if express_delivery_enabled is defined and express_delivery_enabled %}
-          <div id="rcs-ph-delivery-info-block"></div>
+          <div id="sdd-ed-labels-desktop" class="express-delivery"></div>
         {% endif %}
 
         {% if content.delivery_link is not empty %}
