--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full.html.twig
@@ -72,7 +72,7 @@ set classes = [
           <div class="free-gift-promotions free-gift-promotions-full-view-mode">{% if content.free_gift_promotions %}{{ content.free_gift_promotions }}{% endif %}</div>
 
           {% if express_delivery_enabled is defined and express_delivery_enabled %}
-            <div id="rcs-ph-delivery-info-block"></div>
+            <div id="sdd-ed-labels-desktop" class="express-delivery"></div>
           {% endif %}
 
           <div id="pdp-store-click-collect-list"></div>
