CORE-45116: Prefix of mobile number gets appended in entered AURA linked number on Checkout.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -189,7 +189,44 @@
           }
         }
       }
+
+      .customer-points {
+        display: flex;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: space-between;
+
+        .aura-points-info {
+          width: 80%;
+
+          @include breakpoint($upto-desktop) {
+            width: 74%;
+          }
+        }
+
+        .sub-text {
+          width: 15%;
+          text-align: center;
+          cursor: pointer;
+
+          @include breakpoint($upto-desktop) {
+            width: 19%;
+          }
+
+          a {
+            color: $aura-spc-checkout-highlight;
+            text-decoration: underline;
+          }
+          
+        }
+        .partially-enrolled {
+          width: 100%;
+          padding-top: rem(20);
+        }
+      }
     }
+
+
 
     .tooltip-anchor {
       .tooltip-box {
